--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "includes/bfi_thumb"]
 	path = includes/bfi_thumb
 	url = https://github.com/extralagence/bfi_thumb.git
+[submodule "redux-framework"]
+	path = redux-framework
+	url = https://github.com/ReduxFramework/redux-framework.git
